@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class User {
    - email: String
    - phone: String
    - password: String
    - role: String
    + User(...)
}

class Item {
    - designation: String
    - condition: String
    - category: Category
    - image
    + Item(...)
}

class ItemDto {
    - condition: String
    - image
    - category: CategoryDto
    + ItemDto(...)
}

class Category {
    - id: String
    - designation: String
    + Category(...)
}

class AdvertisementDto {
    - title: String
    - description: String
    - date: LocalDate
    - municipality: String
    - itemDto: ItemDto
    + AdvertisementDto(...)
}

class Advertisement {
    - title: String
    - description: String
    - date: LocalDate
    - municipality: String
    - status: AdvertisementStatus
    + Advertisement(...)
}

enum AdvertisementStatus {
}

interface CategoryRepository {
    + getCategoryById(id: string)
}
interface AdvertisementRepository {
    + save(advertisement: Advertisement)
    + findById(id: string)
}
interface ItemRepository {
    + save(item: Item)
    + findById(id: string)
}

class AdvertisementMapper {
    + toEntity(dto: AdvertisementDto): Advertisement
    + toDto(advertisement: Advertisement): AdvertisementDto
}

class AdvertisementService {
    + Advertisement(dto: AdvertisementDto)
    - validateItem(itemId: string)
}

class AdvertisementController {
    + AdvertisementController(service: AdvertisementService)
    + Advertisement(dto: AdvertisementDto)
}

class AdvertisementUI

' --- Relacionamentos ---
AdvertisementUI .> AdvertisementController

AdvertisementController ..> AdvertisementService : service

AdvertisementService .> AdvertisementMapper
AdvertisementService ..> AdvertisementRepository
AdvertisementService ..> CategoryRepository
AdvertisementService ..> ItemRepository

ItemRepository "1" -> "0..*" Item
CategoryRepository "1" --> "0..*" Category
AdvertisementRepository "1" --> "0..*" Advertisement

User -> AdvertisementUI : requests to create

Advertisement "1" --> "1" AdvertisementStatus
Advertisement "1" --> "1" Item : contains
AdvertisementMapper ..> AdvertisementDto
AdvertisementMapper ..> Advertisement

AdvertisementDto "1" --> "1" ItemDto
note bottom of AdvertisementStatus
Active, pending, closed
endnote

@enduml